Fixed vertical spacing

--- a/portfolio/sass/app.scss
+++ b/portfolio/sass/app.scss
@@ -18,3 +18,6 @@ $flat-purple: #9c6beb;
 	height: 200px;
 	background: $flat-red;
 }
+.shiftLeft{
+	padding:0;
+}
